Fix some of the spacing issues for the audio player

--- a/app/styles/components/audioplayer.scss
+++ b/app/styles/components/audioplayer.scss
@@ -1,8 +1,8 @@
 .audio-player-background               {@include css4{background-color:var(--audio-player-background);};min-height:10px;padding:2.5px;}
 // General Audio Player Styles
-.audio-player-container                {@include css4{background-color:var(--audio-player-background);};display:flex;justify-content:space-around;align-items:center;width:100%;height:50px;max-width:800px;margin:auto;}
+.audio-player-container .svgitem       {cursor:pointer;margin-right:18px;}
+.audio-player-container                {@include css4{background-color:var(--audio-player-background);};display:flex;justify-content:center;align-items:center;width:100%;height:50px;max-width:800px;margin:auto;:nth-child(3) {margin-right:36px;}}
 .audio-player-container .item          {border:1px solid transparent;cursor:pointer;height:50px;display:flex;align-items:center;justify-content:center;}
-.audio-player-container .svgitem       {cursor:pointer;}
 .audio-player-container .item:hover    {opacity:.65;}
 .audio-player-container .svgitem:hover {opacity:.65;}
 .audio-player-container .item.active   {@include css4{border-bottom:1px solid var(--transparent-grey);border-top:1px solid var(--menu-active-color);;border-left:1px solid var(--menu-active-color);;border-right:1px solid var(--menu-active-color);background-color:var(--transparent-grey);};z-index:4;}
@@ -24,7 +24,7 @@
 .audio-gripper {display:block;position:relative;left:calc(50% - 25px);bottom:-50%;cursor:pointer;}
 
 // Volume Slider
-#volume-wrap {position: relative}
+#volume-wrap {position: relative;margin-left:18px;}
 .volume-slider-container {display:block;bottom:1px;left:0;position:absolute;}
 .volume-slider           {@include css4{border:1px solid var(--menu-active-color);background-color:var(--transparent-grey);};height:25px;position:absolute;display:flex;align-items:center;justify-content:center;width:175px;margin-left:-75px;}
 .volume-slider .tracker  {@include css4{background-color:var(--menu-active-color);};border-radius:50%;width:15px;height:15px;margin-top:-6px;}
